working on patient visit entry form

--- a/eclipse_ws/biobank2/conf/log4j.properties
+++ b/eclipse_ws/biobank2/conf/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=ERROR,R
-log4j.category.edu.ualberta.med.biobank=DEBUG,stdout
+log4j.rootLogger=warn, R, stdout
+log4j.category.edu.ualberta.med.biobank=debug
 #log4j.category.edu.ualberta.med.biobank.widgets.MultiSelect=TRACE,stdout
 
 ### direct messages to file hibernate.log ###
@@ -20,29 +20,30 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
+
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
-#log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=debug
 
 
 ### log just the SQL
-#log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-#log4j.logger.org.hibernate.type=info
+log4j.logger.org.hibernate.type=debug
 
 ### log schema export/update ###
-#log4j.logger.org.hibernate.tool.hbm2ddl=debug
+log4j.logger.org.hibernate.tool.hbm2ddl=debug
 
 ### log cache activity ###
-#log4j.logger.org.hibernate.cache=debug
+log4j.logger.org.hibernate.cache=debug
 
 ### log JDBC resource acquisition
-#log4j.logger.org.hibernate.jdbc=debug
+log4j.logger.org.hibernate.jdbc=debug
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
-#log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
+log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
 
 log4j.logger.gov.nih.nci=error
 log4j.logger.org.springframework=error
