--- a/eclipse_ws/biobank2/lib/hibernate.properties
+++ b/eclipse_ws/biobank2/lib/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class com.mysql.jdbc.Driver
-hibernate.connection.url jdbc:mysql://localhost:8081/example
+hibernate.connection.url jdbc:mysql://localhost:8081/biobank2
 hibernate.connection.username dummy
 hibernate.connection.password ozzy498
 hibernate.dialect org.hibernate.dialect.MySQLDialect
