--- a/schema/log4j.properties
+++ b/schema/log4j.properties
@@ -25,10 +25,10 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-log4j.logger.org.hibernate.type=info
+#log4j.logger.org.hibernate.type=info
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=debug
+log4j.logger.org.hibernate.tool.hbm2ddl=error
 
 ### log cache activity ###
 #log4j.logger.org.hibernate.cache=debug
