can view patient visits now

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -206,6 +206,12 @@
             id="edu.ualberta.med.biobank.forms.PatientVisitEntryForm"
             name="Patient Visit Entry">
       </editor>
+      <editor
+            class="edu.ualberta.med.biobank.forms.PatientVisitViewForm"
+            default="false"
+            id="edu.ualberta.med.biobank.forms.PatientVisitViewForm"
+            name="Patient Visit View">
+      </editor>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
