working on storage container entry form. hibernate now configured to display SQL statements.

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -318,3 +318,5 @@ SDK_GRID_LOGIN_SERVICE_URL=http://localhost:8080/${SDK_GRID_LOGIN_SERVICE_NAME}
 ENABLE_GRID_LOGIN_MODULE=false
 ENABLE_CSM_LOGIN_MODULE=true
 CAGRID_LOGIN_MODULE_NAME=grid
+
+HIBERNATE_SHOW_SQL=true
