--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -6,17 +6,17 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/acegi-security-1.0.4.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-2.7.6.jar" sourcepath="biobank2src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/asm.jar" sourcepath="biobank2src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/asm.jar" sourcepath="/home/loyola/proj/java/asm-1.5.3"/>
 	<classpathentry exported="true" kind="lib" path="lib/biobank2-beans.jar" sourcepath="lib/biobank2-beans.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/castor-1.0.2.jar" sourcepath="biobank2src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/cglib-2.1.3.jar" sourcepath="biobank2src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/cglib-2.1.3.jar" sourcepath="/home/loyola/proj/java/cglib-src-2.1_3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.jar" sourcepath="biobank2src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/hibernate3.jar" sourcepath="lib/hibernate3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hibernate3.jar" sourcepath="/home/loyola/proj/java/hibernate-3.2/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.14.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-client-framework.jar" sourcepath="lib/sdk-client-framework.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring.jar" sourcepath="biobank2src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring.jar" sourcepath="/home/loyola/proj/java/spring-framework-2.0.3/dist/spring-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-writable-client-framework.jar"/>
 	<classpathentry kind="lib" path="conf" sourcepath="conf"/>
