Specify jboss in conf file

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -115,7 +115,7 @@ CLM_PROJECT_NAME=${PROJECT_NAME}
 #  deployed Web Service.  I.e., the following pattern is used when undeploying the
 #  Web Service from the server: ${SERVER_URL}/services/${WEBSERVICE_NAME}Service
 ##################################################################################
-SERVER_TYPE=other
+SERVER_TYPE=jboss
 SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 
 ##################################################################################
