--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -63,6 +63,11 @@
             id="edu.ualberta.med.biobank.commands.addClinic"
             name="Add Clinic">
       </command>
+      <command
+            defaultHandler="edu.ualberta.med.biobank.handler.ProcessSamplesHandler"
+            id="edu.ualberta.med.biobank.commands.samples.process"
+            name="Process samples">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -109,6 +114,17 @@
                      style="push">
                </command>
             </menu>
+         </menu>
+         <menu
+               id="edu.ualberta.med.biobank.menu.samples"
+               label="Samples"
+               mnemonic="S">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.samples.process"
+                  id="edu.ualberta.med.biobank.menu.samples.process"
+                  mnemonic="p"
+                  style="push">
+            </command>
          </menu>
       </menuContribution>
    </extension>
