--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/"/>
+	<classpathentry kind="lib" path="/usr/abee8/cshome/degrisda/projects/biobank2/caCORE_SDK/sdk/writable-api/dist/sdk-writable-core.jar" sourcepath="/compsci/abee8/cshome/degrisda/projects/biobank2/caCORE_SDK/sdk/writable-api/dist/sdk-writable-core.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/acegi-security-1.0.4.jar" sourcepath="biobank2src.zip"/>
@@ -13,10 +14,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.jar" sourcepath="biobank2src.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/hibernate3.jar" sourcepath="/home/loyola/proj/java/hibernate-3.2/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/hibernate3.jar" sourcepath="/usr/scratch/degrisda/frameworks/hibernate-3.2/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.14.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-client-framework.jar" sourcepath="lib/sdk-client-framework.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring.jar" sourcepath="/home/loyola/proj/java/spring-framework-2.0.3/dist/spring-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring.jar" sourcepath="/usr/scratch/degrisda/frameworks/spring-framework-2.0.3/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar" sourcepath="biobank2src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/sdk-writable-client-framework.jar"/>
 	<classpathentry kind="lib" path="conf" sourcepath="conf"/>
