--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@ eclipse_ws/biobank2/log
 eclipse_ws/biobank2/src/edu/ualberta/med/biobank/test
 runtime-biobank2.biobank2
 schema/schema-export.sql
+eclipse_ws/biobank2.tests/bin
+
 
