Add preferences page fir hand held scanner configuration

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -120,6 +120,12 @@
                   label="Search"
                   style="push">
             </command>
+            <command
+                  commandId="org.eclipse.ui.window.preferences"
+                  id="edu.ualberta.med.biobank.menu.configuration"
+                  label="Configuration"
+                  style="push">
+            </command>
          </menu>
       </menuContribution>
    </extension>
@@ -300,5 +306,40 @@
                value="BioBank2">
          </property>
       </product>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="edu.ualberta.med.biobank.preferences.HanldHeldScannerPreferencePage"
+            id="edu.ualberta.med.biobank.preferences.handHeldScanner"
+            name="Hand Held Scanner">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="edu.ualberta.med.biobank.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
+   <extension
+         point="org.eclipse.ui.activities">
+      <activity
+            description="Preferences from Eclipse Update UI"
+            id="edu.ualberta.med.biobank.activity.updateui"
+            name="Update Preferences">
+      </activity>
+      <activityPatternBinding
+            activityId="edu.ualberta.med.biobank.activity.updateui"
+            pattern="org\.eclipse\.update\.ui/org\.eclipse\.update\..*PreferencePage">
+      </activityPatternBinding>
+      <activity
+            description="Preferences from Eclipse IDE UI"
+            id="edu.ualberta.med.biobank.activity.eclipseide"
+            name="IDE General Preferences">
+      </activity>
+      <activityPatternBinding
+            activityId="edu.ualberta.med.biobank.activity.eclipseide"
+            pattern="org\.eclipse\.ui\.ide/org\.eclipse\.ui\.preferencePages\.Workbench">
+      </activityPatternBinding>
    </extension>
 </plugin>
