--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,10 +5,10 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                conf/,\
-               lib/,\
                lib/commons-lang-2.4.jar,\
                lib/sdk-writable-core.jar,\
-               lib/sdk-writeable-client.framework.jarconf/
+               lib/sdk-writeable-client.framework.jarconf/,\
+               lib/gluegen.jar
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
