--- a/schema/log4j.properties
+++ b/schema/log4j.properties
@@ -19,26 +19,26 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 #log4j.rootLogger=warn, stdout
 #log4j.rootLogger=warn, file
-#log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=trace
 
 ### log just the SQL
-#log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
-#log4j.logger.org.hibernate.type=info
+log4j.logger.org.hibernate.type=info
 
 ### log schema export/update ###
-log4j.logger.org.hibernate.tool.hbm2ddl=error
+log4j.logger.org.hibernate.tool.hbm2ddl=trace
 
 ### log cache activity ###
-#log4j.logger.org.hibernate.cache=debug
+log4j.logger.org.hibernate.cache=debug
 
 ### log JDBC resource acquisition
-#log4j.logger.org.hibernate.jdbc=debug
+log4j.logger.org.hibernate.jdbc=debug
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
-#log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
+log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
 
 log4j.logger.gov.nih.nci=info
 log4j.logger.org.springframework=error
