--- a/eclipse_ws/biobank2/.settings/org.eclipse.jdt.ui.prefs
+++ b/eclipse_ws/biobank2/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Mon Jun 22 14:06:11 MDT 2009
+#Sat Jul 04 12:04:32 MDT 2009
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
@@ -53,7 +53,7 @@ cleanup_profile=org.eclipse.jdt.ui.default.eclipse_clean_up_profile
 cleanup_settings_version=2
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
-formatter_profile=_Code format
+formatter_profile=_Biobank2
 formatter_settings_version=11
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
