--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="biobank2" basedir="." default="sdk">
+<project name="biobank2" basedir="." default="sdk-and-scripts">
 
 <!--
   Overall build file
@@ -35,9 +35,11 @@
      inheritRefs="false" />
 </target>
 
+<target name="sdk-and-scripts" depends="sdk, package-webapp-orm"/>
+
 <target name="deploy-eclipse"
         description="deploys the caCORE SDK beans to the eclipse project"
-        depends="sdk">
+        depends="sdk-and-scripts">
   <copy todir="${eclipse.proj.dir}/lib">
     <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
   </copy>
@@ -77,7 +79,6 @@
 
 <target name="schema" 
         description="generates the database schema for the caCORE SDK data model">
-<!--        depends="sdk">-->
   <ant
      dir="${schema.dir}"
      target="schemaexport"
@@ -131,7 +132,6 @@
 </target>
 
 <target name="package-webapp-orm" depends="package-codegen-orm">
-  <!-- antcall target="sdk" / -->
 	<war destfile="${cacore.sdk.dir}\output\${PROJECT_NAME}\package\webapp\${PROJECT_NAME}.war" webxml="${cacore.sdk.dir}\output\${PROJECT_NAME}\conf\system\web\WEB-INF\web.xml">
 		<manifest>
 			<attribute name="Generated-By" value="biobank2 caCORE SDK Code Generator"/>
@@ -150,8 +150,8 @@
 			<exclude name="xercesImpl*.*"/>
 			<exclude name="cog*.*"/>
 		</lib>
-		<lib dir="${grid-jaas.dir.copy}\lib" includes="*.*" excludes="${grid-jaas.file.output.jaas.jndibinder.name}"/>
-		<fileset dir="${cacore.sdk.dir}\system\web">
+		<lib dir="${cacore.sdk.dir}\grid/grid-jaas\dist" includes="*.*" excludes="${grid-jaas.file.output.jaas.jndibinder.name}"/>
+		<fileset dir="${cacore.sdk.dir}\output\${PROJECT_NAME}/conf/system/web">
 			<include name="**/*"/>
 			<exclude name="**/web.xml"/>
 			<exclude name="${server-exclude-classes-list}"/>
@@ -181,8 +181,5 @@
      target="clean"
      inheritRefs="false" />
 </target>
-
-
-
 
 </project>
