--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -69,8 +69,14 @@
             name="Search">
       </command>
       <command
-            id="edu.ualberta.med.biobank.commands.calibrate"
+            defaultHandler="edu.ualberta.med.biobank.handler.CalibrateHandler"
+            id="edu.ualberta.med.biobank.commands.scanner.calibrate"
             name="Calibrate">
+      </command>
+      <command
+            defaultHandler="edu.ualberta.med.biobank.handler.SelectDefaultScannerHandler"
+            id="edu.ualberta.med.biobank.commands.scanner.default"
+            name="Select Default Scanner">
       </command>
    </extension>
    <extension
@@ -135,8 +141,14 @@
                id="edu.ualberta.med.biobank.menu.scanner"
                label="Scanner">
             <command
-                  commandId="edu.ualberta.med.biobank.commands.calibrate"
-                  id="edu.ualberta.med.biobank.commands.calibrate"
+                  commandId="edu.ualberta.med.biobank.commands.scanner.default"
+                  id="edu.ualberta.med.biobank.commands.scanner.default"
+                  label="Select Default"
+                  style="push">
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.scanner.calibrate"
+                  id="edu.ualberta.med.biobank.commands.scanner.calibrate"
                   label="Calibrate"
                   style="push">
             </command>
