Correct ant task for war packaging

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -56,7 +56,7 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  CACHE_PROTECTION_ELEMENTS: indicates whether or not CSM Protection Elements
 #  should be cached
 ##################################################################################
-ENABLE_SECURITY=false
+ENABLE_SECURITY=true
 ENABLE_INSTANCE_LEVEL_SECURITY=false
 ENABLE_ATTRIBUTE_LEVEL_SECURITY=false
 CSM_PROJECT_NAME=${PROJECT_NAME}
@@ -203,7 +203,7 @@ EXCLUDE_NAMESPACE=
 #  DB_DIALECT: used by Hibernate to prepare database specific queries
 ##################################################################################
 USE_JNDI_BASED_CONNECTION=false
-DB_JNDI_URL=java:/SDK
+DB_JNDI_URL=java:/biobank2
 
 DB_CONNECTION_URL=jdbc:mysql://localhost:3306/biobank2
 DB_USERNAME=dummy
