--- a/build.xml
+++ b/build.xml
@@ -1,185 +1,236 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="biobank2" basedir="." default="sdk-and-scripts">
 
-<!--
-  Overall build file
+	<!--
+      Overall build file 
+      use command "ant -projecthelp" to display the targets.
+    -->
 
-  use command "ant -projecthelp" to display the targets.
-
--->
-
-<property environment="env"/>
-<property name="cacore.sdk.dir" location="caCORE_SDK/sdk" />
-<property name="eclipse.proj.dir" location="eclipse_ws/biobank2" />
-<property name="eclipse.proj.dir.junit" location="eclipse_ws/biobank2.tests" />
-<property name="scripts.proj.dir" location="scripts" /> <!--tp-->
-<property name="model.proj.dir" location="model" /> <!--tp-->
-<property name="data.dir" location="data" />
-<property name="data.sql.dir" location="${data.dir}/sql" />
-<property name="schema.dir" location="schema" />
-<property name="mysql.driver.string" value="org.gjt.mm.mysql.Driver" />
-<property name="database.host" value="localhost" />
-<property name="database.port" value="3306" />
-<property name="database.name" value="biobank2" />
-<property name="database.username" value="dummy" />
-<property name="database.password" value="ozzy498" />
-
-<target name="sdk"
-        description="builds the caCORE SDK from the data model" >
-  <copy
-     file="sdk_conf/deploy.properties"
-     tofile="${cacore.sdk.dir}/conf/deploy.properties"/>
-  <ant
-     dir="${cacore.sdk.dir}"
-     target="build-system"
-     inheritRefs="false" />
-</target>
-
-<target name="sdk-and-scripts" depends="sdk, package-webapp-orm"/>
-
-<target name="deploy-eclipse"
-        description="deploys the caCORE SDK beans to the eclipse project"
-        depends="sdk-and-scripts">
-  <copy todir="${eclipse.proj.dir}/lib">
-    <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
-  </copy>
-  <copy todir="${eclipse.proj.dir}/conf">
-    <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
-      <include name="application-config-client*.xml" />
-    </fileset>
-  </copy>
-  <copy
-     file="${cacore.sdk.dir}/output/biobank2/src/hibernate.cfg.xml"
-     tofile="${eclipse.proj.dir}/lib"/>
-
-  <copy todir="${eclipse.proj.dir.junit}/lib">
-    <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
-  </copy>
-  <copy todir="${eclipse.proj.dir.junit}/conf">
-     <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
-       <include name="application-config-client*.xml" />
-     </fileset>
-   </copy>
-</target>
-
-<target name="deploy-jboss" 
-        description="deploys the caCORE SDK webapp to JBoss">
-  <fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
-  <copy
-     file="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war"
-     tofile="${env.JBOSS_HOME}/server/default/deploy/biobank2.war"/>
-</target>
-
-<target
-   name="deploy"
-   description="deploys to JBoss and Eclipse project">
-  <antcall target="deploy-jboss" />
-  <antcall target="deploy-eclipse" />
-</target>
-
-<target name="schema" 
-        description="generates the database schema for the caCORE SDK data model">
-  <ant
-     dir="${schema.dir}"
-     target="schemaexport"
-     inheritRefs="false" />
-</target>
-
-<target name="dbcreate"
-    description="creates the default tables">
-  <antcall target="schema" />
-  <sql driver="${mysql.driver.string}"
-        url="jdbc:mysql://${database.host}:${database.port}/${database.name}"
-        userid="${database.username}" password="${database.password}" >
-    <transaction src="${data.sql.dir}/sampleTypes.sql" />
-    <transaction src="${data.sql.dir}/pvInfoPossible.sql" />
-    <transaction>commit;</transaction>
-    <classpath>
-      <fileset dir="${cacore.sdk.dir}/system/lib">
-	<include name="*.jar" />
-      </fileset>
-    </classpath>
-  </sql>
-</target>
-
-<!--Add the length="#" field into .hbm.xml, references the biobank.uml file for the VARCHAR(#) -->
-<target name="string-length-field-addition" description="Add the length='#' field into .hbm.xml, references the biobank.uml file for the VARCHAR(#)">
-  <exec executable="perl">
-    <env key="PATH" path="${scripts.proj.dir}"/>
-    <arg value="${scripts.proj.dir}/hbmstringlength.pl"/>
-    <arg value="${model.proj.dir}/biobank2.uml"/>
-    <arg value="${cacore.sdk.dir}/output/biobank2/src/edu/ualberta/med/biobank/model"/>
-	<arg value="0"/><!--Verbose-->
-  </exec>
-</target>
-
-<property name="PROJECT_NAME" value="biobank2" />
-<property name="build.jar.dir.copy" location="${cacore.sdk.dir}\output\${PROJECT_NAME}\build\jar" /> <!--tp-->
-<property name="output.src.dir.copy" location="${cacore.sdk.dir}\output\${PROJECT_NAME}\src" /> <!--tp-->
-<property name="grid-jaas.dir.copy" location="${cacore.sdk.dir}\output\${PROJECT_NAME}\package\grid-jaas" /> <!--tp-->
-
-<target name="package-codegen-orm" description="REDO:: Packages the generated ORM and bean artifacts" depends="string-length-field-addition">
-	<jar destfile="${build.jar.dir.copy}\${PROJECT_NAME}-orm.jar" basedir="${output.src.dir.copy}">
-		<manifest>
-			<attribute name="Generated-By" value="caCORE SDK Code Generator"/>
-			<attribute name="Version" value="${VERSION}"/>
-		</manifest>
-		<include name="**/*.hbm.xml"/>
-		<include name="*.cfg.xml"/>
-		<include name="ehcache.xml"/>
-		<exclude name="${CSM_PROJECT_NAME}.csm.new.hibernate.cfg.xml"/>
-	</jar>
-</target>
-
-<target name="package-webapp-orm" depends="package-codegen-orm">
-	<war destfile="${cacore.sdk.dir}\output\${PROJECT_NAME}\package\webapp\${PROJECT_NAME}.war" webxml="${cacore.sdk.dir}\output\${PROJECT_NAME}\conf\system\web\WEB-INF\web.xml">
-		<manifest>
-			<attribute name="Generated-By" value="biobank2 caCORE SDK Code Generator"/>
-			<attribute name="Version" value="${VERSION}"/>
-		</manifest>
-		<lib dir="${cacore.sdk.dir}\system\dist" includes="*.jar"/>
-		<lib dir="${cacore.sdk.dir}\writable-api\dist" includes="*.jar">
-			<exclude name="${read-api-exclude-list}"/>
-		</lib>
-		<lib dir="${build.jar.dir.copy}" includes="${PROJECT_NAME}-beans.jar" />
-		<lib dir="${build.jar.dir.copy}" includes="${PROJECT_NAME}-orm.jar" />
-		<lib dir="${cacore.sdk.dir}\system\lib" includes="*.jar">
-			<exclude name="${server-exclude-commons-logging}"/>
-			<exclude name="${server-exclude-log4j}"/>
-			<exclude name="servlet.jar"/>
-			<exclude name="xercesImpl*.*"/>
-			<exclude name="cog*.*"/>
-		</lib>
-		<lib dir="${cacore.sdk.dir}\grid/grid-jaas\dist" includes="*.*" excludes="${grid-jaas.file.output.jaas.jndibinder.name}"/>
-		<fileset dir="${cacore.sdk.dir}\output\${PROJECT_NAME}/conf/system/web">
-			<include name="**/*"/>
-			<exclude name="**/web.xml"/>
-			<exclude name="${server-exclude-classes-list}"/>
-		</fileset>
-		<fileset dir="${cacore.sdk.dir}\system\web">
-			<include name="**/*"/>
-		</fileset>
-		<fileset dir="${cacore.sdk.dir}\output\${PROJECT_NAME}\build">
-			<include name="docs/**/*"/>
-		</fileset>
-		<classes dir="${output.src.dir.copy}">
-			<include name="${csm.security.config.file}"/>
-			<include name="${csm.ehcache.file}"/>
-			<include name="${clm.object.state.logger.config}"/>
-		</classes>
-		<webinf dir="${output.src.dir.copy}">
-			<include name="server-config.wsdd"/>
-		</webinf>
-	</war>
-</target>	
-<!--Add the length="#" field into .hbm.xml, references the biobank.uml file for the VARCHAR(#) -->
+	<property environment="env" />
+	<property name="cacore.sdk.dir" location="caCORE_SDK/sdk" />
+	<property name="eclipse.proj.dir" location="eclipse_ws/biobank2" />
+	<property name="eclipse.proj.dir.junit"
+	          location="eclipse_ws/biobank2.tests" />
+	<property name="scripts.proj.dir" location="scripts" />
+	<!--tp--> 
+	<property name="model.proj.dir" location="model" />
+	<!--tp-->
+	<property name="data.dir" location="data" />
+	<property name="data.sql.dir" location="${data.dir}/sql" />
+	<property name="schema.dir" location="schema" />
+	<property name="mysql.driver.string" value="org.gjt.mm.mysql.Driver" />
+	<property name="database.host" value="localhost" />
+	<property name="database.port" value="3306" />
+	<property name="database.name" value="biobank2" />
+	<property name="database.username" value="dummy" />
+	<property name="database.password" value="ozzy498" />
 
 
-<target name="clean">
-  <ant
-     dir="${cacore.sdk.dir}"
-     target="clean"
-     inheritRefs="false" />
-</target>
+	<!-- 
+	  files included in the sdk build.xml - necessary to be sure that we have
+	  all the keys for the target we redefined 
+	-->
+	<property file="${cacore.sdk.dir}/installer.properties" />
+	<property file="${cacore.sdk.dir}/local.properties" />
+	<property file="${cacore.sdk.dir}/conf/deploy.properties" />
+	<property file="${cacore.sdk.dir}/build.properties" />
+	<property file="${cacore.sdk.dir}/${codegen.dir}/build.properties"
+	          prefix="codegen" />
+	<property file="${cacore.sdk.dir}/${codegen.validator.dir}/build.properties"
+	          prefix="validator" />
+	<property file="${cacore.sdk.dir}/${system.dir}/build.properties"
+	          prefix="system" />
+	<property file="${cacore.sdk.dir}/${writable-api.dir}/build.properties"
+	          prefix="writable-api" />
+	<property file="${cacore.sdk.dir}/${security.dir}/build.properties"
+	          prefix="security" />
+	<property file="${cacore.sdk.dir}/${grid-remoting.dir}/build.properties"
+	          prefix="grid-remoting" />
+	<property file="${cacore.sdk.dir}/${grid-jaas.dir}/build.properties"
+	          prefix="grid-jaas" />
+
+	<condition property="server-exclude-commons-logging"
+	           value="commons-logging*.*"
+	           else="">
+		<equals arg1="${SERVER_TYPE}"
+		        arg2="jboss"
+		        casesensitive="false"
+		        trim="true" />
+	</condition>
+	<condition property="server-exclude-log4j" value="log4j*.*" else="">
+		<equals arg1="${SERVER_TYPE}"
+		        arg2="jboss"
+		        casesensitive="false"
+		        trim="true" />
+	</condition>
+	<condition property="server-exclude-classes-list"
+	           value="**/log4j*.*"
+	           else="">
+		<equals arg1="${SERVER_TYPE}"
+		        arg2="jboss"
+		        casesensitive="false"
+		        trim="true" />
+	</condition>
+	<condition property="read-api-exclude-list" value="" else="*.jar">
+		<equals arg1="${WRITABLE_API_EXTENSION_ENABLED}"
+		        arg2="true"
+		        casesensitive="false"
+		        trim="true" />
+	</condition>
+	<!-- end of copied part -->
+
+
+	<target name="sdk" description="builds the caCORE SDK from the data model">
+		<copy file="sdk_conf/deploy.properties"
+		      tofile="${cacore.sdk.dir}/conf/deploy.properties" />
+		<ant dir="${cacore.sdk.dir}"
+		     target="build-system"
+		     inheritRefs="false" />
+	</target>
+
+	<target name="sdk-and-scripts" depends="sdk, package-webapp-orm" />
+
+	<target name="deploy-eclipse"
+	        description="deploys the caCORE SDK beans to the eclipse project"
+	        depends="sdk-and-scripts">
+		<copy todir="${eclipse.proj.dir}/lib">
+			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
+		</copy>
+		<copy todir="${eclipse.proj.dir}/conf">
+			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
+				<include name="application-config-client*.xml" />
+			</fileset>
+		</copy>
+		<copy file="${cacore.sdk.dir}/output/biobank2/src/hibernate.cfg.xml"
+		      tofile="${eclipse.proj.dir}/lib" />
+
+		<copy todir="${eclipse.proj.dir.junit}/lib">
+			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
+		</copy>
+		<copy todir="${eclipse.proj.dir.junit}/conf">
+			<fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/conf">
+				<include name="application-config-client*.xml" />
+			</fileset>
+		</copy>
+	</target>
+
+	<target name="deploy-jboss"
+	        description="deploys the caCORE SDK webapp to JBoss">
+		<fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
+		<copy file="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war"
+		      tofile="${env.JBOSS_HOME}/server/default/deploy/biobank2.war" />
+	</target>
+
+	<target name="deploy" description="deploys to JBoss and Eclipse project">
+		<antcall target="deploy-jboss" />
+		<antcall target="deploy-eclipse" />
+	</target>
+
+	<target name="schema"
+	        description="generates the database schema for the caCORE SDK data model">
+		<ant dir="${schema.dir}" target="schemaexport" inheritRefs="false" />
+	</target>
+
+	<target name="dbcreate" description="creates the default tables">
+		<antcall target="schema" />
+		<sql driver="${mysql.driver.string}"
+		     url="jdbc:mysql://${database.host}:${database.port}/${database.name}"
+		     userid="${database.username}"
+		     password="${database.password}">
+			<transaction src="${data.sql.dir}/sampleTypes.sql" />
+			<transaction src="${data.sql.dir}/pvInfoPossible.sql" />
+			<transaction>commit;</transaction>
+			<classpath>
+				<fileset dir="${cacore.sdk.dir}/system/lib">
+					<include name="*.jar" />
+				</fileset>
+			</classpath>
+		</sql>
+	</target>
+
+	<!--Add the length="#" field into .hbm.xml, references the biobank.uml file for the VARCHAR(#) -->
+	<target name="string-length-field-addition"
+	        description="Add the length='#' field into .hbm.xml, references the biobank.uml file for the VARCHAR(#)">
+		<exec executable="perl">
+			<env key="PATH" path="${scripts.proj.dir}" />
+			<arg value="${scripts.proj.dir}/hbmstringlength.pl" />
+			<arg value="${model.proj.dir}/biobank2.uml" />
+			<arg value="${cacore.sdk.dir}/output/biobank2/src/edu/ualberta/med/biobank/model" />
+			<arg value="0" /> <!--Verbose-->
+		</exec>
+	</target>
+
+	<target name="package-codegen-orm"
+	        description="REDO:: Packages the generated ORM and bean artifacts"
+	        depends="string-length-field-addition">
+		<jar destfile="${cacore.sdk.dir}\${build.jar.dir}\${orm.file}"
+		     basedir="${cacore.sdk.dir}\${output.src.dir}">
+			<manifest>
+				<attribute name="Generated-By"
+				           value="caCORE SDK Code Generator" />
+				<attribute name="Version" value="${VERSION}" />
+			</manifest>
+			<include name="**/*.hbm.xml" />
+			<include name="*.cfg.xml" />
+			<include name="ehcache.xml" />
+			<exclude name="${csm.security.config.file}" />
+		</jar>
+	</target>
+
+	<!-- copied from sdk build.xml -->
+	<target name="package-webapp-orm" depends="package-codegen-orm">
+		<war destfile="${cacore.sdk.dir}\${package.system.dir}\${PROJECT_NAME}.war"
+		     webxml="${cacore.sdk.dir}\${build.conf.web-inf.dir}\web.xml">
+			<manifest>
+				<attribute name="Generated-By"
+				           value="biobank2 caCORE SDK Code Generator" />
+				<attribute name="Version" value="${VERSION}" />
+			</manifest>
+			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.dist.dir}"
+			     includes="*.jar" />
+			<lib dir="${cacore.sdk.dir}\${writable-api.dir}\${writable-api.dist.dir}"
+			     includes="*.jar">
+				<exclude name="${read-api-exclude-list}" />
+			</lib>
+			<lib dir="${cacore.sdk.dir}\${build.jar.dir}"
+			     includes="${bean.file}" />
+			<lib dir="${cacore.sdk.dir}\${build.jar.dir}"
+			     includes="${orm.file}" />
+			<lib dir="${cacore.sdk.dir}\${system.dir}\${system.lib.dir}"
+			     includes="*.jar">
+				<exclude name="${server-exclude-commons-logging}" />
+				<exclude name="${server-exclude-log4j}" />
+				<exclude name="servlet.jar" />
+				<exclude name="xercesImpl*.*" />
+				<exclude name="cog*.*" />
+			</lib>
+			<lib dir="${cacore.sdk.dir}\${grid-jaas.dir}\${grid-jaas.dist.dir}"
+			     includes="*.*"
+			     excludes="${grid-jaas.file.output.jaas.jndibinder.name}" />
+			<fileset dir="${cacore.sdk.dir}\${build.conf.system.web.dir}">
+				<include name="**/*" />
+				<exclude name="**/web.xml" />
+				<exclude name="${server-exclude-classes-list}" />
+			</fileset>
+			<fileset dir="${cacore.sdk.dir}\${system.dir}\${system.web.dir}">
+				<include name="**/*" />
+			</fileset>
+			<fileset dir="${cacore.sdk.dir}\${build.dir}">
+				<include name="docs/**/*" />
+			</fileset>
+			<classes dir="${cacore.sdk.dir}\${output.src.dir}">
+				<include name="${csm.security.config.file}" />
+				<include name="${csm.ehcache.file}" />
+				<include name="${clm.object.state.logger.config}" />
+			</classes>
+			<webinf dir="${cacore.sdk.dir}\${output.src.dir}">
+				<include name="server-config.wsdd" />
+			</webinf>
+		</war>
+	</target>
+
+	<target name="clean">
+		<ant dir="${cacore.sdk.dir}" target="clean" inheritRefs="false" />
+	</target>
 
 </project>
