--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -31,7 +31,7 @@
 	<classpathentry kind="lib" path="lib/sdk-grid-remoting.jar"/>
 	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/gface_0.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/gface_0.9.1.jar" sourcepath="C:/proj/java/biobank2/eclipse_ws/gface-src_0.9.1.zip"/>
 	<classpathentry kind="lib" path="lib/gluegen.jar"/>
 	<classpathentry kind="lib" path="lib/scanlib.jar"/>
 	<classpathentry kind="output" path="bin"/>
