--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                lib/commons-lang-2.4.jar,\
                lib/sdk-writable-core.jar,\
                lib/sdk-writeable-client.framework.jarconf/,\
-               lib/gluegen.jar
+               lib/gluegen.jar,\
+               lib/scanlib.jar
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
