ant task for security configuration

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -56,7 +56,7 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  CACHE_PROTECTION_ELEMENTS: indicates whether or not CSM Protection Elements
 #  should be cached
 ##################################################################################
-ENABLE_SECURITY=false
+ENABLE_SECURITY=true
 ENABLE_INSTANCE_LEVEL_SECURITY=false
 ENABLE_ATTRIBUTE_LEVEL_SECURITY=false
 CSM_PROJECT_NAME=${PROJECT_NAME}
