access database converted to MySQL using BullZip tool

--- a/eclipse_ws/biobank2.importer/.classpath
+++ b/eclipse_ws/biobank2.importer/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="/biobank2/conf" sourcepath="/biobank2/conf"/>
 	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
