Configuration to export product

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -5,11 +5,7 @@ bin.includes = plugin.xml,\
                icons/,\
                .,\
                conf/,\
-               lib/commons-lang-2.4.jar,\
-               lib/sdk-writable-core.jar,\
-               lib/sdk-writeable-client.framework.jarconf/,\
-               lib/gluegen.jar,\
-               lib/scanlib.jar
+               lib/
 jars.compile.order = conf/,\
                      lib/sdk-writeable-client.framework.jarconf/,\
                      .
@@ -18,4 +14,3 @@ source.conf/ = src/,\
                lib/
 output.conf/ = bin/
 source.lib/sdk-writable-core.jar = src/
-
